k8s/base/31-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devops-app
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: taskflow
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
